fix: z-index and intercom on mobile (#169)
* fix: don't render intercom on mobile and hide it on small screens

* fix: modal z-index interferes with the footer

--- a/webapp/src/components/Footer/Footer.css
+++ b/webapp/src/components/Footer/Footer.css
@@ -57,9 +57,12 @@
 }
 
 .Footer .language-dropdown {
-  z-index: 10000 !important;
   min-width: 150px !important;
   transform: scale(0.8) !important;
+}
+
+.Footer .ui.selection.language-dropdown.active {
+  z-index: 1040;
 }
 
 .Footer .mini-copyright {
